--- a/research/trails.ipynb
+++ b/research/trails.ipynb
@@ -311,11 +311,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
-    "splitter_ques_gen = TokenTextSplitter(\n",
+    "splitter_ans_gen = TokenTextSplitter(\n",
     "    model_name = \"gpt-3.5-turbo\",\n",
     "    chunk_size = 1000,\n",
     "    chunk_overlap = 100\n",
@@ -324,16 +324,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
-    "document_answer_gen = splitter_ques_gen.split_documents(document_ques_gen)"
+    "document_answer_gen = splitter_ans_gen.split_documents(document_ques_gen)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        "4"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
